--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "db:reset": "prisma migrate reset --force --skip-generate --skip-seed",
     "db:reset:seed": "prisma migrate reset --force --skip-generate"
   },
-  "prisma": { "seed": "pnpm run seed" },
+  "prisma": {
+    "seed": "pnpm run seed"
+  },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -44,7 +46,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
